Deisgn Maintained of all forms, work done till faculty details form maintainence. Next Major update will be making every database insertion using stored procedures.

--- a/S_Foundation/S_Foundation.csproj
+++ b/S_Foundation/S_Foundation.csproj
@@ -203,6 +203,9 @@
   <ItemGroup>
     <None Include="Images\background-images-for-software-projects-9.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\user.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
